# opencv_practice

./: .gitignore  CMakeLists.txt  READM.md  VID5.xml  calibration_matrix.yaml  extrinsics.yml  in_VID5.xml  intrinsics.yml  out_camera_data.xml  stereo.m  stereo.mat
data/: point_path_data_0.csv  point_path_data_2.csv  point_path_data_3.csv  point_path_data_6.csv  point_path_data_7.csv  point_path_data_9.csv
data/point_path/: data_concat.csv  point_path_data_01.csv  point_path_data_04.csv  point_path_data_05.csv  point_path_data_08.csv
doc/: stereo depth.ods
img/stereo_calibration/: stereo_calib.xml
param/: calibration_matrix.yaml  in_VID5.xml  matlab_stereo_param.yaml  out_camera_data.xml
src/: calibration_pose.py  camera_calibration.py  changing_colorspaces.py  detect_arrows.py  ir_track_center.py  solvepnp_grandma.py  thresholding.py  track_img.py  track_img_center.py  webcam_videocapture.py
src/StereoVisionDepthEstimation/: depth_map.py  stereoVision.py  stereoVision_Chessboard.py  stereoVision_depth_Chessboard.py  stereo_calibration.py  triangulation.py
src/basic/: webcam_videocapture.py
src/calibration/: calibration_pose.py  camera_calibration.py
src/color/: find_contours.py  hsv_trackbar.py  image_gen_path.py  thresholding_trackbar.py
src/ir/: center_find_direction.py  combine_data.py  farthest_find_direction.py  ir_pose.py  ir_track.py  ir_track_center.py  point_path.py  solvepnp_grandma.py
src/matlab_calib/: calibrationSession.mat  matlab2opencv.m  matlabStereo2cvYaml.m  pythonRunMatlab.py  stereo_calib.m  stereo_params.mat  (+3 more)
test/: test.py
(+24 files in other folders)
